# learnsphere-backend

./: .env  .gitignore  README.md  requirements.txt
auth_service/: .env  README.md  main.py  requirements.txt
auth_service/app/api/v1/routes/: users.py
auth_service/app/core/: config.py  database.py
auth_service/app/crud/: user.py
auth_service/app/models/: user.py
auth_service/app/schemas/: user.py
auth_service/app/scripts/: users.sql
task-api-service/: .gitignore  README.md  document.md  main.py  pyproject.toml
task-api-service/app/core/: config.py
task-api-service/app/infrastructure/database/: connection.py
task-api-service/app/infrastructure/database/models/: user.py
task-service/: .gitignore  README.md  main.py  requirements.txt
task-service/app/controller/: task_controller.py
task-service/app/model/: task_model.py
task-service/app/resources/scripts/: tasks.sql
task-service/app/schema/: task_schema.py
task-service/app/service/: itask_service.py  task_service_impl.py
